
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(supportlibs)

OPTION(BUILD_SHARED_LIBS "Build shared libraries" ON)
OPTION(BUILD_STATIC_LIBS "Build static libraries" OFF)

IF(NOT ZLIB_SRC_DIR)
    IF(ROOT_SRC_DIR AND EXISTS "${ROOT_SRC_DIR}/zlib")
        SET(ZLIB_SRC_DIR "${ROOT_SRC_DIR}/zlib")
    ENDIF(ROOT_SRC_DIR AND EXISTS "${ROOT_SRC_DIR}/zlib")
ENDIF(NOT ZLIB_SRC_DIR)

SET(LIBJPEG_TARGET_NAME_SHARED jpeg)
SET(LIBJPEG_TARGET_NAME_STATIC libjpeg)

SET(LIBPNG_TARGET_NAME_SHARED png)
SET(LIBPNG_TARGET_NAME_STATIC libpng)

SET(ZLIB_TARGET_NAME_SHARED zlib)
SET(ZLIB_TARGET_NAME_STATIC libzlib)

ADD_SUBDIRECTORY(zlib)
ADD_SUBDIRECTORY(libjpeg)
ADD_SUBDIRECTORY(libpng)
