
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(supportlibs)

OPTION(BUILD_SHARED_LIBS "Build shared libraries" ON)
OPTION(BUILD_STATIC_LIBS "Build static libraries" OFF)
OPTION(BUILD_TESTS       "Build test/example programs" OFF)
OPTION(SEPARATE_INSTALL_DIRS "Install libraries/headers to separate dirs" OFF)

IF(NOT ZLIB_SRC_DIR)
    IF(ROOT_SRC_DIR AND EXISTS "${ROOT_SRC_DIR}/zlib")
        SET(ZLIB_SRC_DIR "${ROOT_SRC_DIR}/zlib")
    ENDIF(ROOT_SRC_DIR AND EXISTS "${ROOT_SRC_DIR}/zlib")
ENDIF(NOT ZLIB_SRC_DIR)

SET(LIBJPEG_TARGET_NAME_SHARED jpeg)
SET(LIBJPEG_TARGET_NAME_STATIC libjpeg)

SET(LIBPNG_TARGET_NAME_SHARED png)
SET(LIBPNG_TARGET_NAME_STATIC libpng)

SET(LIBTIFF_TARGET_NAME_SHARED tiff)
SET(LIBTIFF_TARGET_NAME_STATIC libtiff)

SET(ZLIB_TARGET_NAME_SHARED zlib)
SET(ZLIB_TARGET_NAME_STATIC libzlib)

ADD_SUBDIRECTORY(zlib)
ADD_SUBDIRECTORY(OpenEXR)
ADD_SUBDIRECTORY(libjpeg)
ADD_SUBDIRECTORY(libpng)
ADD_SUBDIRECTORY(libtiff)
ADD_SUBDIRECTORY(jasper)
